Display package weight and uom for sale and shipment #5974

--- a/view/shipment_view_form.xml
+++ b/view/shipment_view_form.xml
@@ -5,5 +5,15 @@
             <label name="tracking_number"/>
             <field name="tracking_number"/>
         </group>
+
+    </xpath>
+
+    <xpath expr="//field[@name='warehouse']" position="after">
+        <group id="package details" string="Package Details" colspan="4">
+            <label name="package_weight"/>
+            <field name="package_weight"/>
+            <label name="weight_uom"/>
+            <field name="weight_uom"/>
+        </group>
     </xpath>
 </data>
