--- a/view/shipment_view_form.xml
+++ b/view/shipment_view_form.xml
@@ -8,12 +8,12 @@
 
     </xpath>
 
-    <xpath expr="//field[@name='warehouse']" position="after">
-        <group id="package details" string="Package Details" colspan="4">
+    <xpath expr="//notebook" position="inside">
+        <page id="carrier" string="Carrier Details">
             <label name="package_weight"/>
             <field name="package_weight"/>
             <label name="weight_uom"/>
             <field name="weight_uom"/>
-        </group>
+        </page>
     </xpath>
 </data>
