Provision to store carrier's logs for sale and shipment #6040

--- a/view/sale_view_form.xml
+++ b/view/sale_view_form.xml
@@ -6,6 +6,8 @@
             <field name="package_weight"/>
             <label name="weight_uom"/>
             <field name="weight_uom"/>
+            <newline />
+            <field name="carrier_logs" colspan="4"/>
         </page>
     </xpath>
 </data>
