--- a/view/shipment_view_form.xml
+++ b/view/shipment_view_form.xml
@@ -14,6 +14,8 @@
             <field name="package_weight"/>
             <label name="weight_uom"/>
             <field name="weight_uom"/>
+            <newline />
+            <field name="carrier_logs" colspan="4"/>
         </page>
     </xpath>
 </data>
