--- a/view/shipment_out_form.xml
+++ b/view/shipment_out_form.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0"?>
 <data>
+    <xpath expr="/form/group[@id='state_buttons']/group[@id='buttons']" position="replace_attributes">
+	<group col="7" colspan="1" id="buttons">
+        </group>
+    </xpath>
     <xpath expr="/form/group[@id='state_buttons']/group[@id='buttons']/button[@name='done']" position="after">
         <button string="Generate shipping label" name="label_wizard"/>
     </xpath>
