Implemented base for address validation
* Added a field default_validation_provider in configuration, to select
  provider for address validation.
* Added validate_address instance method in party.address.

--- a/view/carrier_configuration_form.xml
+++ b/view/carrier_configuration_form.xml
@@ -1,4 +1,6 @@
 <form string="Carrier Configuration">
     <label name="save_carrier_logs" />
     <field name="save_carrier_logs" />
+    <label name="default_validation_provider" />
+    <field name="default_validation_provider" />
 </form>
