Added override_weight to initial view of label wizard. #6475

--- a/view/generate_shipping_label_wizard_start_view_form.xml
+++ b/view/generate_shipping_label_wizard_start_view_form.xml
@@ -2,4 +2,6 @@
 <form string="Generate Shipment Label" col="2">
     <label name="carrier"/>
     <field name="carrier"/>
+    <label name="override_weight"/>
+    <field name="override_weight"/>
 </form>
