Added back tracking number field to shipment #7704
Review ID: 11933002

--- a/view/generate_shipping_label_message_view_form.xml
+++ b/view/generate_shipping_label_message_view_form.xml
@@ -3,6 +3,8 @@
   <image name="tryton-attachment" xexpand="0" xfill="0"/>
   <field name="message" colspan="4"/>
   <newline/>
+  <label name="tracking_number"/>
+  <field name="tracking_number"/>
   <label name="cost"/>
   <field name="cost"/>
   <label name="cost_currency"/>
