Change weight fields to float #7773
Tryton follows float for measurements. This patch changes all
measurements fields to float. Also it makes following changes:

 * package_weight field in Package has been renamed to weight
 * weight function field has been introduced in ShipmentOut
 * All weight fields precision is based on uom

review10933001

--- a/view/package_form.xml
+++ b/view/package_form.xml
@@ -5,8 +5,8 @@
             <page id="weight" string="Weight Details">
                 <label name="computed_weight"/>
                 <field name="computed_weight"/>
-                <label name="package_weight"/>
-                <field name="package_weight"/>
+                <label name="weight"/>
+                <field name="weight"/>
                 <label name="weight_uom"/>
                 <field name="weight_uom"/>
                 <label name="override_weight"/>
