--- a/view/generate_shipping_label_wizard_start_view_form.xml
+++ b/view/generate_shipping_label_wizard_start_view_form.xml
@@ -5,4 +5,7 @@
     <label name="no_of_packages" />
     <field name="no_of_packages" />
     <label name="no_of_packages" string="If the number of packages is zero, a single new package will automatically be created for this shipment." colspan="2" states="{'invisible': Bool(Eval('no_of_packages'))}" xalign="0.0" />
+    <label name="override_weight" />
+    <field name="override_weight" />
+    <label name="override_weight" string="This weight will be equally distributed among all packages." colspan="2" xalign="0.0" />
 </form>
