Show shipment instructions in label generation wizard.

--- a/view/generate_shipping_label_wizard_start_view_form.xml
+++ b/view/generate_shipping_label_wizard_start_view_form.xml
@@ -8,4 +8,7 @@
     <label name="override_weight" />
     <field name="override_weight" />
     <label name="override_weight" string="This weight will be equally distributed among all packages." colspan="2" xalign="0.0" />
+    <newline />
+    <separator name="shipping_instructions" colspan="4"/>
+    <field name="shipping_instructions" colspan="4"/>
 </form>
