Filter based on carriers

--- a/view/shipment_out_tree.xml
+++ b/view/shipment_out_tree.xml
@@ -1,5 +1,6 @@
 <data>
     <xpath expr="//field[@name='customer']" position="after">
         <field name="warehouse"/>
+        <field name="carrier" />
     </xpath>
 </data>
