--- a/view/box_type_tree.xml
+++ b/view/box_type_tree.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <tree string="Shipping Box Type">
     <field name="code"/>
-    <field name="carrier"/>
+    <field name="provider"/>
     <field name="distance_unit"/>
 </tree>
