New model to store tracking number

--- a/view/carrier_form.xml
+++ b/view/carrier_form.xml
@@ -2,5 +2,7 @@
     <xpath expr="/form/field[@name='carrier_cost_method']" position="after">
         <label name="currency"/>
         <field name="currency"/>
+        <newline/>
+        <field name="tracking_numbers" colspan="4"/>
     </xpath>
 </data>
