--- a/view/shipment_tracking_tree.xml
+++ b/view/shipment_tracking_tree.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 
-<tree string="Tracking Numbers" colors="If(~Bool(Eval('is_cancelled')), 'black', 'grey')">
-    <field name="is_cancelled"/>
+<tree string="Tracking Numbers">
+    <field name="state"/>
     <field name="is_master"/>
     <field name="tracking_number"/>
     <field name="carrier"/>
