--- a/view/box_type_tree.xml
+++ b/view/box_type_tree.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0"?>
 <tree string="Shipping Box Type">
+    <field name="name"/>
     <field name="code"/>
     <field name="provider"/>
     <field name="distance_unit"/>
