--- a/view/shipment_out_form.xml
+++ b/view/shipment_out_form.xml
@@ -18,4 +18,28 @@
             <field name="shipping_instructions"/>
         </page>
     </xpath>
+    <xpath expr="//field[@name=&quot;carrier&quot;]" position="after">
+        <group col="6" colspan="2" id="group_checkboxes">
+            <label name="tracking_number"/>
+            <field name="tracking_number"/>
+        </group>
+    </xpath>
+    <xpath expr="//notebook" position="inside">
+        <page id="carrier" string="Carrier Details">
+            <label name="carrier"/>
+            <field name="carrier"/>
+            <label name="carrier_service"/>
+            <field name="carrier_service"/>
+            <label name="cost"/>
+            <field name="cost"/>
+            <label name="cost_currency"/>
+            <field name="cost_currency"/>
+            <label name="weight"/>
+            <field name="weight"/>
+            <label name="weight_uom"/>
+            <field name="weight_uom"/>
+            <label name="tracking_number"/>
+            <field name="cost_currency"/>
+        </page>
+    </xpath>
 </data>
