--- a/view/carrier_service_view_tree.xml
+++ b/view/carrier_service_view_tree.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0"?>
-
 <tree string="Carrier Services">
-    <field name="provider"/>
+    <field name="carrier_cost_method"/>
     <field name="name"/>
-    <field name="active"/>
 </tree>
