--- a/view/generate_shipping_label_wizard_start_view_form.xml
+++ b/view/generate_shipping_label_wizard_start_view_form.xml
@@ -2,6 +2,8 @@
 <form string="Generate Shipment Label" col="2">
     <label name="carrier"/>
     <field name="carrier" widget="selection"/>
+    <label name="carrier_service"/>
+    <field name="carrier_service" widget="selection"/>
     <label name="no_of_packages" />
     <field name="no_of_packages" />
     <label name="no_of_packages" string="If the number of packages is zero, a single new package will automatically be created for this shipment." colspan="2" states="{'invisible': Bool(Eval('no_of_packages'))}" xalign="0.0" />
