--- a/view/sale_view_form.xml
+++ b/view/sale_view_form.xml
@@ -2,8 +2,8 @@
 <data>
     <xpath expr="//notebook" position="inside">
         <page id="carrier" string="Carrier Details">
-            <label name="total_weight"/>
-            <field name="total_weight"/>
+            <label name="weight"/>
+            <field name="weight"/>
             <label name="weight_uom"/>
             <field name="weight_uom"/>
         </page>
