Add active field to carrier

--- a/view/carrier_form.xml
+++ b/view/carrier_form.xml
@@ -1,4 +1,8 @@
 <data>
+    <xpath expr="//field[@name='party']" position="after">
+        <label name="active"/>
+        <field name="active"/>
+    </xpath>
     <xpath expr="/form/field[@name='carrier_cost_method']" position="after">
         <notebook colspan="4">
             <page id="services" string="Services">
