Improvements to apply shipping wizard

--- a/view/apply_shipping_start_form.xml
+++ b/view/apply_shipping_start_form.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <form string="Apply Shipping" col="2">
     <label name="carrier"/>
-    <field name="carrier"/>
+    <field name="carrier" widget="selection"/>
     <label name="carrier_service"/>
-    <field name="carrier_service"/>
+    <field name="carrier_service" widget="selection"/>
     <label name="weight"/>
     <field name="weight"/>
 </form>
