Add 'apply_shipping' button to sale view

--- a/view/sale_view_form.xml
+++ b/view/sale_view_form.xml
@@ -12,4 +12,7 @@
         <label name="carrier_service"/>
         <field name="carrier_service"/>
     </xpath>
+    <xpath expr="//label[@name='invoice_state']" position="before">
+        <button name="apply_shipping" string="Apply Shipping" colspan="4"/>
+    </xpath>
 </data>
