--- a/view/generate_shipping_label_message_view_form.xml
+++ b/view/generate_shipping_label_message_view_form.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0"?>
 <form string="Shipment Label Generated" col="2">
   <image name="tryton-attachment" xexpand="0" xfill="0"/>
   <field name="message" colspan="4"/>
