--- a/view/no_module_form.xml
+++ b/view/no_module_form.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0"?>
 <form string="No Shipping Module Found" col="2">
     <field name="no_module_msg"/>
 </form>
