--- a/view/generate_shipping_label_wizard_start_view_form.xml
+++ b/view/generate_shipping_label_wizard_start_view_form.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0"?>
 <form string="Generate Shipment Label" col="2">
     <label name="carrier"/>
     <field name="carrier" widget="selection"/>
@@ -6,7 +6,7 @@
     <field name="carrier_service" widget="selection"/>
     <label name="no_of_packages" />
     <field name="no_of_packages" />
-    <label name="no_of_packages" string="If the number of packages is zero, a single new package will automatically be created for this shipment." colspan="2" states="{'invisible': Bool(Eval('no_of_packages'))}" xalign="0.0" />
+    <label name="no_of_packages" string="If the number of packages is zero, a single new package will automatically be created for this shipment." colspan="2" xalign="0.0" />
     <label name="box_type" />
     <field name="box_type" widget="selection"/>
     <label name="override_weight" />
