--- a/view/package_form.xml
+++ b/view/package_form.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0"?>
 <data>
     <xpath expr="/form/field[@name='shipment']" position="after">
         <notebook colspan="4">
